--- a/Task_8/package.json
+++ b/Task_8/package.json
@@ -1,17 +1,11 @@
 {
-  "name": "task_8",
+  "name": "file-writer-app",
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "body-parser": "^2.2.0",
-    "express": "^5.1.0"
-  },
-  "description": ""
+    "express": "^4.18.2"
+  }
 }
