--- a/Task_8/package.json
+++ b/Task_8/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "file-writer-app",
+  "name": "file-writer",
   "version": "1.0.0",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node index.js"
   },
   "dependencies": {
     "express": "^4.18.2"
-  } 
+  }
 }
