--- a/Task_9/.env
+++ b/Task_9/.env
@@ -1,3 +1,3 @@
 PORT=5000
-MONGO_URI=mongodb://localhost:27017/blogDB
-JWT_SECRET=your_secret_key
+MONGO_URI=mongodb+srv://admin:admin123@cluster0.edpp2cz.mongodb.net/
+JWT_SECRET=rachna11
